<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_special_delivery">SpecialDelivery</string>
    <string name="title_activity_filthy_mongrel">FilthyMongrelActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_bandits_in_the_woods">BanditsInTheWoods</string>

    <string name="app_name">Quest App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="button_Login">Log in!</string>

    <string name="BandintsInTheWoods"><b>Bandits in the Woods</b> \nPosted By: HotDogg The Bounty Hunter</string>
    <string name="SpecialDelivery"><b>Special Delivery</b> \nPosted By: Sir Jimmy The Swift</string>
    <string name="FilthyMongrel"><b>Filthy Mongrel</b> \nPosted By: Prince Jack, The Iron Horse</string>

    <string name="quest1Title">Bandits in the Woods</string>
    <string name="quest1QuestGiver">Posted By: HotDogg The Bounty Hunter</string>
    <string name="quest1Reward">\n<b>Reward:</b> 1000 Gold, 500xp\n\n</string>
    <string name="quest1Details">        The famed bounty hunter HotDog has requested the aid of a hero in ridding the woods
        of terrifying bandits who have thus far eluded his capture, as he is actually a dog,
        and cannot actually grab things more than 6 feet off the ground",</string>

    <string name="quest2Title">Special Delivery</string>
    <string name="quest2QuestGiver">Posted By: Sir Jimmy The Swift</string>
    <string name="quest2Reward">\n<b>Reward:</b> 1000 Gold, 500xp\n\n</string>
    <string name="quest2Details">        \n\n\n\n<b>Reward:</b> 500 Gold, 200xp\n\n\n
        Sir Jimmy was once the fastest man in the kingdom, brave as any soldier and wise as a king.
        Unfortunately, age catches us all in the end, and he has requested that I, his personal
        scribe, find a hero to deliver a package of particular importance and protect it with
        their life.",</string>

    <string name="quest3Title">Filthy Mongrel</string>
    <string name="quest3QuestGiver">Posted By: Prince Jack, The Iron Horse</string>
    <string name="quest3Reward">\n<b>Reward:</b> 10000 Gold, 5000xp\n\n</string>
    <string name="quest3Details">        \n\n\n\n<b>Reward:</b> 1000 Gold, 500xp\n\n\n
        That strange dog that everyone is treating like a bounty-hunter must go.
        By the order of Prince Jack, that smelly, disease ridden mongrel must be removed
        from our streets by any means necessary. He is disrupting the lives of ordinary
        citizens, and it\'s just really weird.",</string>

    <string name="location">Location of origin</string>
    <string name="button_update">Update Location</string>


</resources>
