<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="questapp.myapp.SpecialDeliveryActivity">

    <TextView
        android:text="@string/quest2Title"
        android:textStyle="bold"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/quest2QuestGiver"
        android:textStyle="normal"
        android:textSize="8pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/quest2Details"
        android:textStyle="normal"
        android:textSize="8pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
