<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="questapp.myapp.Quests">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/BandintsInTheWoods"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="#4ec0b6"
            android:onClick="quest1Details"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/SpecialDelivery"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="#1e8d94"
            android:onClick="quest2Details"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/FilthyMongrel"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="#4ec0b6"
            android:onClick="quest3Details"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
